--- a/day8 string operations and functions-checkpoint.ipynb
+++ b/day8 string operations and functions-checkpoint.ipynb
@@ -1,6 +1,143 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2d5f33c7-9034-4acb-a449-aa72ce0ccea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user is not valid because the length of the charcter is less then 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input()\n",
+    "validate_string = \"qwubuyygfcbgiuhgyuubg@09\"\n",
+    "if len(s) >= 8:\n",
+    "    if  s[0].isupper() or s[0].islower():\n",
+    "        for i in range(1, len(s)):\n",
+    "            if s[i] not in validate_string:\n",
+    "                print(f\"invalid username because character {s[i]}\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(\"valid string\")\n",
+    "    else:\n",
+    "        print(\"username not valid because first chracter is not upper or lower \")\n",
+    "else:\n",
+    "    print(\"user is not valid because the length of the charcter is less then 8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "12164a2b-1a46-418d-b698-de191916d5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "program done\n",
+      "program done\n",
+      "program done\n",
+      "program done\n",
+      "program done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    if i==10:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        print(\"program done\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "28dade9a-57b4-4e10-84ae-df1deda54549",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (612475990.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdef add (a,b)\u001b[39m\n                 ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add (a,b)\n",
+    "return a+b\n",
+    "def sub(a,b):\n",
+    "    return a-b\n",
+    "    def mul(a*b)\n",
+    "def div(a,b):\n",
+    "    if b==0:\n",
+    "        return\"zero divisiopn not possible\"\n",
+    "        return a/b\n",
+    "if_name_==\"_main_\":\n",
+    "print(\"welcom to small level caluclater\")\n",
+    "n1= int(input(\"enter number 1:\"))\n",
+    "n2=int(input(\"enter number 2:\"))\n",
+    "print(\"1.addition/n 2. sub/n 3.mul/n 4.div\")\n",
+    "if choice ==1:\n",
+    "    print(\"sum of two numbers:\",addition(n1,n2))\n",
+    "elif choice ==2:\n",
+    "    print(\"sub of two numbers is:\",sub(n1,n2))\n",
+    "elif choice ==3 \n",
+    "print(\"mul of two numbers is:\",mul(n1,n2))\n",
+    "elif choice ==4:\n",
+    "print(\"div of two numbers is:\",div(n1,n2))\n",
+    "else\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "071b334d-2865-4466-a928-286d09816168",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
